# context-atlas

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  __ai__.md  __ai__.template.md  pyproject.toml
.codex/: AGENTS.md  config.toml
.codex/agents/: parent-backend.toml  parent-devops.toml  parent-documentation-uat.toml  parent-planner-decomp.toml  parent-qa.toml  specialist-delivery-recovery.toml  specialist-planning-change.toml  specialist-python-implementation.toml  specialist-review-readiness.toml
.codex/modes/: implementation.md  operational-delivery.md  planning.md  recovery.md  review.md  rework.md
.codex/protocols/: delegation.md  escalation.md  execution-slice.md  handoff.md  planning.md  recovery.md  review.md  rework.md
.codex/roles/: backend.md  devops.md  documentation-uat.md  planner-decomp.md  qa.md
.githooks/: pre-push
.github/workflows/: __ai__.md  ai-last-verified.yml  ai-verify-folder-contracts.yml  ci.yml
docs/: README.md
docs/Exploratory/: README.md  agentic_runtime_materialization_shortcomings.md
docs/Guides/: README.md  codex_repository_workflow.md  context_atlas_tour.md  docs_database_workflow.md  getting_started.md  low_code_workflow.md
docs/Planning/: Context-Engine-Conversion-PR-Plan.md  Initial-Implementation-Hardening-PR-Plan.md  README.md  agentic_runtime_model_strengthening_product_definition.md  ai_governance_system_evolution_product_definition.md  consumer_packaging_and_distribution_product_definition.md  deeper_architectural_tensions_product_definition.md  low_hanging_fruit_and_boundary_cleanup_product_definition.md  task_ai_owner_file_compaction_and_hygiene.md  (+2 more)
docs/Release/: README.md  (+4 more)
examples/: README.md  mixed_source_registry.py  starter_api_smoke.py  starter_context_flow.py  starter_context_flow_sample_output.md
scripts/: __ai__.md  ai_verify_contracts.py  check_ai_docs.py  check_codex_materialization.py  check_import_boundaries.py  import_boundary_rules.toml  install_git_hooks.py  materialize_codex_runtime.py  preflight.py  update_last_verified.py  validate_ai_docs.py
tests/: README.md  __ai__.md  test_ai_verify_contracts.py  test_bootstrap_layers.py  test_budget_and_compression.py  test_candidate_ranking.py  test_cli.py  test_codex_materialization.py  test_codex_repository_workflow.py  test_config_observability.py  test_context_assembly_service.py  test_docs_database_workflow.py  test_domain_models.py  test_filesystem_document_adapter.py  test_lexical_retrieval.py  test_low_code_workflow.py  test_memory_policy.py  test_mvp_proof_capture.py  test_packet_rendering.py  test_record_adapter_shape.py  test_record_source_adapter.py  test_source_semantics.py  test_trace_rendering.py
(+508 files in other folders)
