[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-atlas"
version = "0.1.0"
description = "A standalone context-governance engine for Codex-powered systems that classifies, ranks, budgets, and assembles context into auditable packets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Craig Holland", email = "craig_holland@hotmail.com" },
]
keywords = [
    "context",
    "codex",
    "governance",
    "memory",
    "budgeting",
    "retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.11,<3",
]

[project.scripts]
context-atlas-starter = "context_atlas.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.12",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
pretty = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["docs/Authoritative/Canon/Architecture/example_ci_scripts"]

